// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpellBlock /> should be match the snapshot 1`] = `
<div
  className="spell-block"
>
  <p
    className="spell-block-name"
  >
    Flumph Lantern
  </p>
  <p
    className="spell-block-source"
  >
    Homebrew
  </p>
  <p
    className="spell-block-level-school"
  >
    Evocation cantrip
  </p>
  <div
    className="spell-block-stats"
  >
    <p
      className="spell-block-casting-time"
    >
      <strong>
        Casting Time:
      </strong>
       
      1 action
    </p>
    <p
      className="spell-block-range"
    >
      <strong>
        Range:
      </strong>
       
      30 feet
    </p>
    <p
      className="spell-block-components"
    >
      <strong>
        Components:
      </strong>
       
      V, M (a pinch of flumph dust)
    </p>
    <p
      className="spell-block-duration"
    >
      <strong>
        Duration:
      </strong>
       
      1 hour
    </p>
  </div>
  <RichText
    className="spell-block-description"
    markdown={true}
    text="You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. "
  />
</div>
`;

exports[`<SpellBlock /> with showAdditionalDetails: true should be match the snapshot 1`] = `
<div
  className="spell-block"
>
  <p
    className="spell-block-name"
  >
    Flumph Lantern
  </p>
  <p
    className="spell-block-source"
  >
    Homebrew
  </p>
  <p
    className="spell-block-level-school"
  >
    Evocation cantrip
  </p>
  <div
    className="spell-block-stats"
  >
    <p
      className="spell-block-casting-time"
    >
      <strong>
        Casting Time:
      </strong>
       
      1 action
    </p>
    <p
      className="spell-block-range"
    >
      <strong>
        Range:
      </strong>
       
      30 feet
    </p>
    <p
      className="spell-block-components"
    >
      <strong>
        Components:
      </strong>
       
      V, M (a pinch of flumph dust)
    </p>
    <p
      className="spell-block-duration"
    >
      <strong>
        Duration:
      </strong>
       
      1 hour
    </p>
  </div>
  <RichText
    className="spell-block-description"
    markdown={true}
    text="You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. "
  />
  <hr />
  <div
    className="spell-block-additional-details"
  >
    <p
      className="spell-block-slug"
    >
      <em>
        Slug:
      </em>
       
      flumph-lantern
    </p>
    <p
      className="spell-block-short-description"
    >
      <em>
        Short Description:
      </em>
       
      Floating light illuminates 20 feet + 20 feet dim light
    </p>
  </div>
</div>
`;
